[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/SettingsMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen_check" type="CheckButton" parent="."]
margin_left = 437.0
margin_top = 15.0
margin_right = 513.0
margin_bottom = 55.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
margin_left = 379.0
margin_top = 305.0
margin_right = 549.0
margin_bottom = 350.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="."]
margin_left = 208.0
margin_top = 102.0
margin_right = 305.0
margin_bottom = 281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll_sense_label" type="RichTextLabel" parent="Labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="v_sense_label" type="RichTextLabel" parent="Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="h_sense_label" type="RichTextLabel" parent="Labels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sliders" type="Control" parent="."]
margin_left = 351.0
margin_top = 100.0
margin_right = 600.0
margin_bottom = 276.0

[node name="horizontal_camera_sens" type="HSlider" parent="Sliders"]
anchor_right = 1.0
margin_bottom = 16.0
tick_count = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vertical_camera_sense" type="HSlider" parent="Sliders"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 8.0
tick_count = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll_sense" type="HSlider" parent="Sliders"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
tick_count = 16

[connection signal="toggled" from="fullscreen_check" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="Sliders/horizontal_camera_sens" to="." method="_on_horizontal_camera_sens_value_changed"]
[connection signal="value_changed" from="Sliders/vertical_camera_sense" to="." method="_on_vertical_camera_sense_value_changed"]
[connection signal="value_changed" from="Sliders/scroll_sense" to="." method="_on_horizontal_camera_sens_value_changed"]
